--- a/_config.yml
+++ b/_config.yml
@@ -17,12 +17,12 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 # Site Settings
 locale                   : "ko-KR"
 rtl                      : # true, false (default) # turns direction of the page into right to left for RTL languages
-title                    : "리뷰폭스"
+title                    : "바이큐브"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "reviewfox"
-description              : "똑똑한 구매를 위한 신뢰의 리뷰"
-url                      : "https://reviewfox.github.io"
+name                     : "buycube"
+description              : "구매 고민을 3초 만에 해결"
+url                      : "https://buycube.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
@@ -84,7 +84,7 @@ google:
 # SEO Related
 google_site_verification :
 bing_site_verification   :
-naver_site_verification  : "329c71df48e7fcd7deb14a52c57543190d79d28d"
+naver_site_verification  : "8f5de8dcafcc56966c6f0e93c17009faf0105e4a"
 yandex_site_verification :
 baidu_site_verification  :
 
@@ -113,9 +113,9 @@ analytics:
 
 # Site Author
 author:
-  name             : "리뷰폭스"
+  name             : "큐브리뷰어"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "실제 사용 후기를 바탕으로 한 정직한 리뷰! 소비자의 현명한 선택을 돕는 파트너."
+  bio              : "다양한 제품 리뷰와 비교 콘텐츠로 최적의 구매 선택을 도와드립니다."
   location         : "Somewhere"
   email            :
   links:
